--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:url" content="https://ckoshien.github.io/countdown3sara/" data-react-helmet="true"/>
+    <meta property="og:image" content="https://ckoshien.github.io/countdown3sara/images/promo.jpg" data-react-helmet="true"/>
+    <meta property="og:title" content="三皿カウントダウンタイマー" data-react-helmet="true"/>
+    <meta property="og:description" content="三皿大会まであと何日?" data-react-helmet="true"/>
+    <meta property="og:type" content="website" data-react-helmet="true"/>
+    <meta name="twitter:card" content="summary_large_image" data-react-helmet="true"/>
+    <meta name="twitter:description" content="三皿大会まであと何日?" data-react-helmet="true"/>
+    <meta name="twitter:title" content="三皿カウントダウンタイマー" data-react-helmet="true"/>
+    <meta name="twitter:image" content="https://ckoshien.github.io/countdown3sara/images/promo.jpg" data-react-helmet="true"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>三皿カウントダウンタイマー</title>
